@startuml
' Estilos y configuraciones
skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam classFontSize 14
skinparam arrowColor #444444
skinparam classBackgroundColor #F5F5F5
skinparam classBorderColor #444444

package "Firebase" {
    class Firestore {
        + collection: users
        + document: userId
        + timezones: List
        + alarms: List
        + theme: boolean
        + language: String
    }

    class FirebaseAuth {
        + signIn(email, password)
        + signUp(email, password)
        + signOut()
        + getCurrentUser()
    }

    class FirebaseStorage {
        + uploadProfileImage(userId, imageUri)
        + getProfileImageUrl(userId)
    }
}

package "Utils" {
    class FirestoreManager {
        - db: FirebaseFirestore
        - auth: FirebaseAuth
        + saveTimeZones(List)
        + loadTimeZones()
        + saveAlarms(List)
        + loadAlarms()
        + saveTheme(boolean)
        + saveLanguage(String)
    }

    class TimeZoneManager {
        - apiKey: String
        + getTimeZone(lat, lon)
    }
}

package "Models" {
    class User {
        + userId: String
        + email: String
        + timezones: List
        + alarms: List
        + theme: boolean
        + language: String
    }

    class TimeZone {
        + id: String
        + displayName: String
        + offset: int
    }

    class Alarm {
        + time: String
    }
}

FirestoreManager --> Firestore
FirestoreManager --> FirebaseAuth
FirestoreManager --> User
TimeZoneManager --> TimeZone
User --> TimeZone
User --> Alarm

@enduml
